--- a/src/components/StatsGraphs.astro
+++ b/src/components/StatsGraphs.astro
@@ -350,7 +350,7 @@ const defaultMetricKey = "guitar";
             .call(d3.axisBottom(x).tickSizeOuter(0))
             .selectAll("text")
             .style("font-size", "12px")
-            .style("fill", "#6b7280");
+            .style("fill", "#111827");
         
         // ----------- Y AXIS -----------
         const yAxis = (g) =>
@@ -369,7 +369,7 @@ const defaultMetricKey = "guitar";
             })
             .selectAll("text")
             .style("font-size", "12px")
-            .style("fill", "#6b7280");
+            .style("fill", "##111827");
 
 
         svg.append("g").call(xAxis);
