--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -60,13 +60,14 @@ const posts = rawPosts
             <p>No posts yet. Add some markdown files to <code>src/content/blog/</code>!</p>
           ) : (
             <ul class="post-grid">
-              {posts.map((post) => (
+              {posts.map((post, i) => (
                 <BlogCard
                   href={`/blog/${post.slug}/`}
                   title={post.data.title}
                   pubDate={post._pub}
                   heroImage={post.data.heroImage}
                   heroVideo={post.data.heroVideo}
+                  {...(i === 0 ? { 'data-lcp': true } : {})}
                 />
               ))}
             </ul>
