--- a/src/pages/blog/index.astro
+++ b/src/pages/blog/index.astro
@@ -152,13 +152,13 @@ const posts = (await getCollection('blog', ({ data }) => data?.draft !== true))
           </div>
 
           <div class="empty" id="empty">No posts match your search.</div>
-
+          
           <ul id="grid">
-            {posts.map((post) => {
+            {posts.map((post, i) => {
               const title = post.data.title ?? '';
               const heroImage = post.data.heroImage;
               const heroVideo = (post.data as any).heroVideo;
-
+          
               return (
                 <BlogCard
                   href={`/blog/${post.slug}/`}
@@ -167,6 +167,7 @@ const posts = (await getCollection('blog', ({ data }) => data?.draft !== true))
                   heroImage={heroImage}
                   heroVideo={heroVideo}
                   data-title={title.toLowerCase()}
+                  {...(i === 0 ? { 'data-lcp': true } : {})}
                 />
               );
             })}
